src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Industry_Category__c</fullName>
        <description>Industry category of account.  Is this account endemic or non-endemic to your business?</description>
        <inlineHelpText>Is the account endemic or non-endemic to your business?</inlineHelpText>
        <label>Industry Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Endemic</fullName>
                </value>
                <value>
                    <fullName>Non-Endemic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsUsingMPP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Accout using MPP as Payment Provider?</description>
        <inlineHelpText>Is this Accout using MPP as Payment Provider?</inlineHelpText>
        <label>Is Using MPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Digital_Letter_Extracted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Digital Letter Extracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <formula>DATETIMEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location_Type_Code__c</fullName>
        <label>Location Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MGMcode__c</fullName>
        <description>Member get Member code. If the customer gives this code to someone, he will be able to get a subscription at the same price</description>
        <label>MGM code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MGMgiver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the giver of a MGM offer</description>
        <label>MGM giver</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MGMgiver</relationshipLabel>
        <relationshipName>MGMRecipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPP_CurrentPayScheduleEndDate__c</fullName>
        <label>MPP Current Pay Schedule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPP_Current_Pay_Schedule_End_Date__c</fullName>
        <label>MPP Current Pay Schedule End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPP_Digital_Payment_Id__c</fullName>
        <description>Corresponds to the MPP Digital Subscription ID</description>
        <label>MPP Digital Payment Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPP_End_Day__c</fullName>
        <formula>DAY(DATEVALUE( MPP_Renewal_Pay_Schedule_End_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPP End Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPP_Renewal_Pay_Schedule_End_Date__c</fullName>
        <label>MPP Renewal Pay Schedule End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPP_Renewal_Pay_Schedule_Start_Date__c</fullName>
        <label>MPP Renewal Pay Schedule Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPP_Service_Id__c</fullName>
        <label>MPP Service Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPP_Start_Day__c</fullName>
        <formula>DAY(DATEVALUE( MPP_Renewal_Pay_Schedule_Start_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPP Start Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Shop Manager</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Subs_End_Date__c</fullName>
        <label>Max (Subs End Date)</label>
        <summarizedField>Subscription__c.End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Subscription__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Lapsed</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mobile_First_Accessed__c</fullName>
        <label>Smartphone First Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_Free_Trial_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Free Trial Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Last_Accessed__c</fullName>
        <label>Smartphone Last Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_app_first_accessed_datetime__c</fullName>
        <label>Mobile app first accessed datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mon_Fri_Net__c</fullName>
        <label>Mon-Fri Net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mon_Fri_Supply__c</fullName>
        <label>Mon-Fri Supply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multicode__c</fullName>
        <label>Multicode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Account_Status__c</fullName>
        <description>Status used by First Clarity to determine online page redirections.</description>
        <formula>IF(RecordType.Name = &apos;Digital Subscriber&apos;, 
   Subscriber_Digital_Status__c, 
   IF(RecordType.Name = &apos;Individual Subscriber&apos;, 
      IF(AND(Number_of_Subscriptions__c &gt; 1, Number_of_Offered_Subscriptions__c = 1), 
        &apos;Offered&apos;,
         IF(Subscription_Status_calc__c + Number_of_Pending_Subscriptions__c + Count_Pending_Cancel_Still_Active__c &gt; 0, 
            &apos;Active&apos;,
            &apos;Lapsed&apos;)
      ),
  &apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status used by First Clarity to determine online page redirections.</inlineHelpText>
        <label>My Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Change_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customer is only allowed to change their name once as more could potentially be a customer trying to transfer their POC to another person which is against our T&amp;C&apos;s</description>
        <label>Name Change Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_ACQ_Promo_code__c</fullName>
        <description>Field for new ACQ&apos;s that have come in on the MGM scheme.</description>
        <inlineHelpText>Enter the promo code the ACQ has been provided with here.</inlineHelpText>
        <label>New ACQ Promo code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Pending_Cancellation_subs__c</fullName>
        <label>Number Pending Cancellation subs</label>
        <summaryFilterItems>
            <field>Subscription__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Pending Cancellation</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Subscriptions__c</fullName>
        <description>Number of subscriptions fwith status or active under subscriber</description>
        <label>Number_of_Active_Subscriptions</label>
        <summaryFilterItems>
            <field>Subscription__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Declined_Subscriptions__c</fullName>
        <label>Number of Declined Subscriptions</label>
        <summaryFilterItems>
            <field>Subscription__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Declined</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_In_Renewal_Subscription__c</fullName>
        <description>Number of In Renewal subscriptions for subscriber</description>
        <label>Number_of_In_Renewal_Subscription</label>
        <summaryFilterItems>
            <field>Subscription__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>In Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Offered_Subscriptions__c</fullName>
        <label>Number of Offered Subscriptions</label>
        <summaryFilterItems>
            <field>Subscription__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Offered</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Pending_Subscriptions__c</fullName>
        <label>Number of Pending Subscriptions</label>
        <summaryFilterItems>
            <field>Subscription__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Subscriptions__c</fullName>
        <label>Number of Subscriptions</label>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OppositionSundayTitle__c</fullName>
        <label>Opposition Sunday Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday Times</fullName>
                </value>
                <value>
                    <fullName>Observer</fullName>
                </value>
                <value>
                    <fullName>Independent on Sunday</fullName>
                </value>
                <value>
                    <fullName>Mail on Sunday</fullName>
                </value>
                <value>
                    <fullName>Sunday Express</fullName>
                </value>
                <value>
                    <fullName>News of the World</fullName>
                </value>
                <value>
                    <fullName>Sunday Mirror</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Star on Sunday</fullName>
                </value>
                <value>
                    <fullName>Local Paper</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Read</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OppositionTitle__c</fullName>
        <label>Opposition Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Express</fullName>
                </value>
                <value>
                    <fullName>Sun</fullName>
                </value>
                <value>
                    <fullName>Mirror</fullName>
                </value>
                <value>
                    <fullName>Star</fullName>
                </value>
                <value>
                    <fullName>Local Paper</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Read</fullName>
                </value>
                <value>
                    <fullName>Financial Times</fullName>
                </value>
                <value>
                    <fullName>I (Mini Independent)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opposition_Sunday_Title_Frequency__c</fullName>
        <description>Number of times per month the customer reads the sunday selected paper</description>
        <label>Opposition Sunday Title Frequency</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opposition_Title_Frequency__c</fullName>
        <description>Number of times per week the customer reads the weekly selected paper</description>
        <label>Opposition Title Frequency</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Taken_By_Company__c</fullName>
        <label>Order Taken By (Company)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Taken_By_User_Department__c</fullName>
        <label>Order Taken By (User/Department)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Taken_Date__c</fullName>
        <label>Order Taken Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Taken_Method__c</fullName>
        <label>Order Taken Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POC__c</fullName>
        <externalId>true</externalId>
        <label>POC</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Round_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paper Round User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Account - used only for s-control, not a replacement to the existing field.</description>
        <label>Primary Buyer Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Token__c</fullName>
        <label>Partner Token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayPoint_Terminal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PayPoint Terminal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PayZone_Terminal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PayZone Terminal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permissions_Last_Change_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>SB 09/06: Added default value of TODAY for field</description>
        <label>Permissions Last Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Platform_Vendor_ID__c</fullName>
        <label>Platform Vendor ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Possible_Pay_Schedule_Issue__c</fullName>
        <formula>IF( DATEVALUE(MPP_Current_Pay_Schedule_End_Date__c) &lt;  Subscription_End_Date__c , &quot;POSSIBLE ERROR&quot;, &quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Possible Pay Schedule Issue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Promo_Code_Expiry_Date__c</fullName>
        <label>Previous Promo Code Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Promo_Code__c</fullName>
        <label>Previous Promo Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Promotion_Name__c</fullName>
        <label>Previous Promotion Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Plan__c</fullName>
        <label>Price Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan 0</fullName>
                </value>
                <value>
                    <fullName>Plan 1</fullName>
                    <default>true</default>
                    <label>Plan 1</label>
                </value>
                <value>
                    <fullName>Plan 2</fullName>
                </value>
                <value>
                    <fullName>Plan 3</fullName>
                </value>
                <value>
                    <fullName>Plan 4</fullName>
                </value>
                <value>
                    <fullName>Plan 5</fullName>
                </value>
                <value>
                    <fullName>Plan S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PricingOptionId__c</fullName>
        <label>PricingOptionId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Option</label>
        <referenceTo>Pricing_Options__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Agency_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary buyer agency.  Updated via Apex from the Partner related list where the role = &quot;Buyer&quot;.</description>
        <label>Primary Agency (Buyer)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advertisers (Buyer)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Agency_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary buyer agency contact for designated account.</description>
        <label>Primary Agency Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Buyer_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_Name__c</fullName>
        <description>Flag to decide if the cust name is printed on the vouchers</description>
        <inlineHelpText>Flag to decide if the cust name is printed on the vouchers, True = yes, this is the default</inlineHelpText>
        <label>Print Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <default>true</default>
                    <label>True</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Code_Expiry_Date__c</fullName>
        <label>Promo Code Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <description>Existing subscribers promo code for MGM</description>
        <inlineHelpText>This is the promo code for existing sbuscribers for the MGM scheme.</inlineHelpText>
        <label>Promo Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Name__c</fullName>
        <label>Promotion Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RET_ID__c</fullName>
        <externalId>true</externalId>
        <label>RET ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recently_Lapsed_End_Date__c</fullName>
        <formula>if( AND((Number_of_Active_Subscriptions__c = 0 &amp;&amp;  Number_of_In_Renewal_Subscription__c = 0 &amp;&amp;  Number_of_Pending_Subscriptions__c = 0), (Max_Subs_End_Date__c + 91 &gt; Today())),  Max_Subs_End_Date__c + 91, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recently Lapsed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refused_Email__c</fullName>
        <label>Refused Email Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Declined to provide E-Mail</fullName>
                </value>
                <value>
                    <fullName>Does not have E-Mail address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registrant_Entitlement_Sync_Attempts__c</fullName>
        <description>Defines how many times sync attempt was run.</description>
        <inlineHelpText>Defines how many times sync attempt was run.</inlineHelpText>
        <label>Registrant Entitlement Sync Attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registrant_Entitlement_Sync_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if registrant entitlement batch job was already run and run successfully.</description>
        <inlineHelpText>Defines if registrant entitlement batch job was already run and run successfully.</inlineHelpText>
        <label>Registrant Entitlement Sync Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replatform_Digital_Status__c</fullName>
        <defaultValue>if( $RecordType.Name ==&apos;Registrant&apos;, &apos;Registered&apos;,&apos;Inactive&apos;)</defaultValue>
        <label>Replatform Digital Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Active_Sub_Count__c</fullName>
        <label>Retailer Active Sub Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retailers</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retmulti_Description__c</fullName>
        <label>Retmulti Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retmulti__c</fullName>
        <label>Retmulti</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Total_Previous_Year__c</fullName>
        <description>Revenue Total Generated from the Agency.  Typically Integrated from Billing System.</description>
        <inlineHelpText>Revenue Total Generated from the Agency.  Typically Integrated from Billing System.</inlineHelpText>
        <label>Revenue Total (Previous Year)</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RollUpActivesub__c</fullName>
        <label>RollUpActivesub</label>
        <summaryFilterItems>
            <field>Subscription__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Active, In Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SRN__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>SRN</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Salutation_Text_Hidden__c</fullName>
        <formula>IF( 
   CONTAINS(TEXT(Salutation), &apos;.&apos;), 
   SUBSTITUTE(TEXT(Salutation), &apos;.&apos;, &apos;&apos;), 
   TEXT(Salutation)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salutation Text Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sat_Net__c</fullName>
        <label>Sat Net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sat_Supply__c</fullName>
        <label>Sat Supply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Reference_Number__c</fullName>
        <label>School Reference Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shop_Name__c</fullName>
        <label>Shop Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub-Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Digital_Status__c</fullName>
        <defaultValue>&apos;Inactive&apos;</defaultValue>
        <label>Subscriber Digital Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Number__c</fullName>
        <description>SLP-43: New formula field for subscriber number</description>
        <formula>IF( LEN( SRN__c ) &gt;= 7,
&quot;TS&quot; &amp; SRN__c,
&quot;TS&quot; &amp; LPAD( SRN__c , 7 , &quot;0&quot;)
)</formula>
        <inlineHelpText>New subscriber number reference</inlineHelpText>
        <label>Subscriber Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Number_static__c</fullName>
        <description>This is the static (field value is not calculated using formula) version of the Subscriber Number field</description>
        <externalId>true</externalId>
        <label>Subscriber Number (static)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Type_Name__c</fullName>
        <formula>CASE( RecordTypeId , &quot;01220000000DCSr&quot;, &quot;Individual Subscriber&quot;, &quot;01220000000DCT6&quot;, &quot;School&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Type Name (CACI)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Active Subscription End Date</label>
        <summarizedField>Subscription__c.End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Subscription__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Active, In Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscription_Frequency__c</fullName>
        <label>Subscription Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>continuous</fullName>
                </value>
                <value>
                    <fullName>52 weeks</fullName>
                </value>
                <value>
                    <fullName>26 weeks</fullName>
                </value>
                <value>
                    <fullName>13 weeks</fullName>
                </value>
                <value>
                    <fullName>monthly</fullName>
                </value>
                <value>
                    <fullName>yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <description>SLP-61: SB 23/02/10: Change logic on Subscriber Status</description>
        <formula>IF( (Subscription_Status_calc__c + Count_Pending_Cancel_Still_Active__c ) &gt; 0, &apos;Active&apos;, IF( Number_of_Pending_Subscriptions__c &gt; 0, &apos;Pending&apos;, &apos;Inactive&apos; ))</formula>
        <label>Print Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Status_calc__c</fullName>
        <label>Subscription Status calc</label>
        <summaryFilterItems>
            <field>Subscription__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Active, In Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sun_Net__c</fullName>
        <label>Sun Net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sun_Supply__c</fullName>
        <label>Sun Supply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TDT__c</fullName>
        <externalId>true</externalId>
        <label>TDT</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMG_Engagement_Score__c</fullName>
        <label>TMG Engagement Score</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMG_Loyalty_Email__c</fullName>
        <description>SLP-50: New marketing permissions field</description>
        <label>TMG Loyalty Email</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMG_Loyalty_Mail__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SLP-50: New marketing permissions field</description>
        <label>TMG Loyalty Mail</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMG_Loyalty_Phone__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SLP-50: New marketing permissions field</description>
        <label>TMG Loyalty Phone</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMG_Loyalty_SMS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SLP-50: New marketing permissions field</description>
        <label>TMG Loyalty SMS</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMG_Model_Score_Image__c</fullName>
        <formula>IMAGE(TMG_Model_Score_Img__c, &apos;TMG Model Score&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TMG Model Score Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMG_Model_Score_Img__c</fullName>
        <formula>CASE(TMG_Model_Score__c , 
     &apos;0&apos;, &apos;/resource/0/LowScoreImage&apos;,
     &apos;1&apos;, &apos;/resource/0/MediumScoreImage&apos;,
     &apos;2&apos;, &apos;/resource/0/HighScoreImage&apos;,
     &apos;3&apos;, &apos;/resource/0/HighestScoreImage&apos;,
     &apos;/resource/0/LowScoreImage&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TMG Model Score Img</label>
        <type>Text</type>
    </fields>
</CustomObject>